--- a/paper/sections/fokker_planck.tex
+++ b/paper/sections/fokker_planck.tex
@@ -177,105 +177,28 @@ Here, we consider three different Fokker-Planck equations and use random search 
 Batches are re-sampled every iteration for all optimizers except for KFAC and KFAC*, which use the same batch for ten iterations.
 \Cref{fig:fokker-planck-random-appendix} summarizes our results.
 
-%\begin{figure}[!h]
-%  \centering
-%  \def\pathToFigs{kfac_pinns_exp/exp47_groupplot_fokker_planck_isotropic_gaussian_random}
-%  \begin{subfigure}[t]{1.0\linewidth}
-%    \caption{}\label{subfig:fokker-planck-random-time}
-%    % trim legend, xlabel and xticklabels
-%    % [trim={left bottom right top},clip]
-%    \includegraphics[trim={0 1.3cm 0 0},clip]{\pathToFigs/l2_error_over_time.pdf}
-%    % trim the legend and titles
-%    % [trim={left bottom right top},clip]
-%    \includegraphics[trim={0 0.5cm 0 0.3cm},clip]{\pathToFigs/loss_over_time.pdf}
-%  \end{subfigure}
-%  \begin{subfigure}[t]{1.0\linewidth}
-%    \caption{}\label{subfig:fokker-planck-random-step}
-%    % trim the legend, xlabel and xticklabels
-%    % [trim={left bottom right top},clip]
-%    \includegraphics[trim={0 1.3cm 0 0.3cm},clip]{\pathToFigs/l2_error_over_step.pdf}
-%    % trim the titles
-%    \includegraphics[trim={0 0 0 0.3cm},clip]{\pathToFigs/loss_over_step.pdf}
-%  \end{subfigure}
-%  \caption{Training loss and evaluation $L_2$ error for learning the solution to Fokker Planck (left) and logarithmic Fokker-Planck equations (center, right) over (\subref{subfig:fokker-planck-random-time}) time and (\subref{subfig:fokker-planck-random-step}) steps using random search.}\label{fig:fokker-planck-random-appendix}
-%\end{figure}
-
-\paragraph{Best run details} The runs shown in \Cref{fig:fokker-planck-random-appendix} correspond to the following hyper-parameters:
+\paragraph{Best run details} The runs shown in \todo{Reference figure} correspond to the following hyper-parameters ($9+1$-d logarithmic Fokker-Planck equation with $10 \to 256 \to 256 \to 128 \to 128 \to 1$ tanh-activated MLP ($D=\num{118145}$)):
 \begin{itemize}
-\item $1+1$-d Fokker-Planck equation with $2 \to 64 \to 1$ tanh-activated MLP ($D=\num{257}$):
-  \begin{itemize}
-    \def\pathToRuns{kfac_pinns_exp/exp46_fokker_planck1d_isotropic_gaussian_random/tex}
-  \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
-  \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
-  \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
-  \item \textbf{LBFGS:} \input{\pathToRuns/best_LBFGS.tex}
-  \item \textbf{ENGD (full):} \input{\pathToRuns/best_ENGD_full.tex}
-  \item \textbf{ENGD (layer-wise):} \input{\pathToRuns/best_ENGD_per_layer.tex}
-  \item \textbf{KFAC:} \input{\pathToRuns/best_KFAC.tex}
-  \item \textbf{KFAC*:} \input{\pathToRuns/best_KFAC_auto.tex}
-  \end{itemize}
-
-\item $9+1$-d logarithmic Fokker-Planck equation with $10 \to 256 \to 256 \to 128 \to 128 \to 1$ tanh-activated MLP ($D=\num{118145}$):
-  \begin{itemize}
-    \def\pathToRuns{kfac_pinns_exp/exp43_log_fokker_planck9d_isotropic_gaussian_random/tex}
-  \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
-  \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
-  \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
-  \item \textbf{LBFGS:} \input{\pathToRuns/best_LBFGS.tex}
-  \item \textbf{KFAC:} \input{\pathToRuns/best_KFAC.tex}
-  \item \textbf{KFAC*:} \input{\pathToRuns/best_KFAC_auto.tex}
-  \end{itemize}
-  We noticed that KFAC* requires exponential moving averages close to one to work well.
-  We see that while KFAC reduces the loss roughly as well as KFAC* per iteration (\Cref{subfig:fokker-planck-random-step} center), its internal line search has detrimental effects on generalization (\Cref{subfig:fokker-planck-random-step} center) and run time (\Cref{subfig:fokker-planck-random-time} center).
-
-\item $99+1$-d logarithmic Fokker-Planck equation with $10 \to 768 \to 768 \to 512 \to 512 \to 1$ tanh-activated MLP ($D=\num{1325057}$):
-  \begin{itemize}
-    \def\pathToRuns{kfac_pinns_exp/exp45_log_fokker_planck99d_isotropic_gaussian_random/tex}
-  \item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
-  \item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
-    % \item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
-  \item \textbf{LBFGS:} \input{\pathToRuns/best_LBFGS.tex}
-  \item \textbf{KFAC:} \input{\pathToRuns/best_KFAC.tex}
-    % \item \textbf{KFAC*:} \input{\pathToRuns/best_KFAC_auto.tex}
-  \end{itemize}
+  \def\pathToRuns{kfac_pinns_exp/exp43_log_fokker_planck9d_isotropic_gaussian_random/tex}
+\item \textbf{SGD:} \input{\pathToRuns/best_SGD.tex}
+\item \textbf{Adam:} \input{\pathToRuns/best_Adam.tex}
+\item \textbf{Hessian-free:} \input{\pathToRuns/best_HessianFree.tex}
+\item \textbf{LBFGS:} \input{\pathToRuns/best_LBFGS.tex}
+\item \textbf{KFAC:} \input{\pathToRuns/best_KFAC.tex}
+\item \textbf{KFAC*:} \input{\pathToRuns/best_KFAC_auto.tex}
 \end{itemize}
+We noticed that KFAC* requires exponential moving averages close to one to work well.
+We see that while KFAC reduces the loss roughly as well as KFAC* per iteration (\Cref{subfig:fokker-planck-random-step} center), its internal line search has detrimental effects on generalization (\Cref{subfig:fokker-planck-random-step} center) and run time (\Cref{subfig:fokker-planck-random-time} center).
 
-\paragraph{Search space details} The runs shown in \Cref{fig:fokker-planck-random-appendix} were determined to be the best via a random search on the following search spaces which each optimizer given approximately the same total computational time ($\mathcal{U}$ denotes a uniform, and $\mathcal{LU}$ a log-uniform distribution):
+\paragraph{Search space details} The runs shown in \todo{Reference figure} were determined to be the best via a random search on the following search spaces which each optimizer given approximately the same total computational time ($\mathcal{U}$ denotes a uniform, and $\mathcal{LU}$ a log-uniform distribution):
 \begin{itemize}
-
-\item $1+1$-d Fokker-Planck equation with $2 \to 64 \to 1$ tanh-activated MLP ($D=\num{257}$):
-  \begin{itemize}
-    \def\pathToRuns{kfac_pinns_exp/exp46_fokker_planck1d_isotropic_gaussian_random/tex}
-  \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
-  \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
-  \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
-  \item \textbf{LBFGS:} \input{\pathToRuns/sweep_LBFGS.tex}
-  \item \textbf{ENGD (full):} \input{\pathToRuns/sweep_ENGD_full.tex}
-  \item \textbf{ENGD (layer-wise):} \input{\pathToRuns/sweep_ENGD_per_layer.tex}
-  \item \textbf{KFAC:} \input{\pathToRuns/sweep_KFAC.tex}
-  \item \textbf{KFAC*:} \input{\pathToRuns/sweep_KFAC_auto.tex}
-  \end{itemize}
-\item $9+1$-d logarithmic Fokker-Planck equation with $10 \to 256 \to 256 \to 128 \to 128 \to 1$ tanh-activated MLP ($D=\num{118145}$):
-  \begin{itemize}
-    \def\pathToRuns{kfac_pinns_exp/exp43_log_fokker_planck9d_isotropic_gaussian_random/tex}
-  \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
-  \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
-  \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
-  \item \textbf{LBFGS:} \input{\pathToRuns/sweep_LBFGS.tex}
-  \item \textbf{KFAC:} \input{\pathToRuns/sweep_KFAC.tex}
-  \item \textbf{KFAC*:} \input{\pathToRuns/sweep_KFAC_auto.tex}
-  \end{itemize}
-
-\item $99+1$-d logarithmic Fokker-Planck equation with $10 \to 768 \to 768 \to 512 \to 512 \to 1$ tanh-activated MLP ($D=\num{1325057}$):
-  \begin{itemize}
-    \def\pathToRuns{kfac_pinns_exp/exp45_log_fokker_planck99d_isotropic_gaussian_random/tex}
-  \item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
-  \item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
-    % \item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
-  \item \textbf{LBFGS:} \input{\pathToRuns/sweep_LBFGS.tex}
-  \item \textbf{KFAC:} \input{\pathToRuns/sweep_KFAC.tex}
-    % \item \textbf{KFAC*:} \input{\pathToRuns/sweep_KFAC_auto.tex}
-  \end{itemize}
+  \def\pathToRuns{kfac_pinns_exp/exp43_log_fokker_planck9d_isotropic_gaussian_random/tex}
+\item \textbf{SGD:} \input{\pathToRuns/sweep_SGD.tex}
+\item \textbf{Adam:} \input{\pathToRuns/sweep_Adam.tex}
+\item \textbf{Hessian-free:} \input{\pathToRuns/sweep_HessianFree.tex}
+\item \textbf{LBFGS:} \input{\pathToRuns/sweep_LBFGS.tex}
+\item \textbf{KFAC:} \input{\pathToRuns/sweep_KFAC.tex}
+\item \textbf{KFAC*:} \input{\pathToRuns/sweep_KFAC_auto.tex}
 \end{itemize}
 
 \subsection{Limitations of Our Current Approach}
@@ -294,7 +217,6 @@ We can enforce initial conditions in the ansatz via
 \begin{equation*}
   (t,\vx) \mapsto t q_\vtheta(t, \vx) + \log p_0(\vx)
 \end{equation*}
-
 
 %%% Local Variables:
 %%% mode: latex
