[ADD] short paragraph on Fokker-Planck in main text.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -171,6 +171,14 @@
   year =         2022
 }
 
+@article{sun2024dynamical,
+  title={Dynamical measure transport and neural pde solvers for sampling},
+  author={Sun, Jingtong and Berner, Julius and Richter, Lorenz and Zeinhofer, Marius and M{\"u}ller, Johannes and Azizzadenesheli, Kamyar and Anandkumar, Anima},
+  journal={arXiv preprint arXiv:2407.07873},
+  year={2024}
+}
+
+
 @article{lagaris1998artificial,
   title =        {Artificial neural networks for solving ordinary and partial
                   differential equations},
