--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -25,9 +25,9 @@
   \texttt{mueller@mathc.rwth-aachen.de} \\
   \And
   Marius Zeinhofer$^*$\\
-  Simula Research Laboratory \\
-  Oslo, Norway \\
-  \texttt{mariusz@simula.no}
+  Seminar for Applied Mathematics, ETH Z\"urich, \\
+  Department of Nuclear Medicine, University Hospital Freiburg\\
+  \texttt{marius.zeinhofer@uniklinik-freiburg.de}
 }
 %%% Local Variables:
 %%% mode: latex
