--- a/paper/sections/taylor_mode_forward_laplacian.tex
+++ b/paper/sections/taylor_mode_forward_laplacian.tex
@@ -516,6 +516,70 @@ As shown in \Cref{subeq:taylor-mode-multi-directional-1-2}, for both \Cref{eq:ta
 This propagation reduces back to the forward Laplacian \Cref{eq:forward-laplacian-activation-layers,eq:forward-laplacian-linear-layer} when we set $c_{i,j} = \delta_{i,j}$.
 In contrast to other attempts to compute such a weighted sum of second-order derivatives by reducing it to (multiple) partial standard forward Laplacians~\cite{li2024dof}, we do not need to diagonalize the coefficient matrix and can compute the linear operator in one forward propagation.
 
+\subsection{Comparison of Forward Laplacian and Autodiff Laplacian}\label{app:subsec:comparison}
+
+In principle, any method that comptues the input-Laplacian of a feedforward network can be used to assemble the Kronecker-factors in our approximation. 
+We compare the efficency of our implementation of the forward Laplacian that we use in all our experiments to an off-the shelve solution. 
+
+
+\paragraph{Setup}
+We consider two Laplacian implementations:
+\begin{enumerate}
+  \item \emph{Autodiff Laplacian.} Computes the Laplacian with PyTorch's automatic differentiation (functorch) by computing the batched Hessian trace (via torch.func.hessian and torch.func.vmap). This is the standard approach in many PINN implementations.
+  \item \emph{Forward Laplacian.} Computes the Laplacian via the forward Laplacian framework. We used this approach for all PDEs and optimizers presented in the experiments.
+\end{enumerate}
+
+We use the biggest network from our experiments (the $D_\Omega \to 768\to 768\to 512\to 512\to 1$ MLP with tanh-activations from \Cref{fig:10D-Poisson}), then measure run time and peak memory consumption of computing the net's Laplacian on a mini-batch of size with varying values of $N=1024$. To reduce measurement noise, we repeat each run over five independent Python sessions and report the smallest value. We use the same GPU as in all other experiments (NVIDIA RTX 6000 with 24 GiB memory).
+
+\paragraph{Results} 
+The following tables compare run time and peak memory between the two approaches in \Cref{app:table:comparison-runtimes} and \Cref{app:table:comparison-memory}, respectively. 
+\begin{table}[h]
+  \label{app:table:comparison-memory}
+  \begin{center}
+    \begin{tabular}{cccc}
+      \toprule
+      $D_{\Omega}$ & \textbf{Autodiff Laplacian [s]} & \textbf{Forward Laplacian [s]} \\
+      \midrule
+      1   & 0.051 (1.6x) & 0.033 (1.0x) \\
+      10  & 0.20 (2.0x)  & 0.10 (1.0x)  \\
+      100 & 1.7 (2.0x)   & 0.84 (1.0x)  \\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+  \caption{asdf}
+\end{table}
+We observe that the forward Laplacian is roughly twice as fast as the \texttt{functorch} Laplacian. 
+\begin{table}[h]
+  \label{app:table:comparison-runtimes}
+  \begin{center}
+    \begin{tabular}{cccc}
+      \toprule
+      $D_{\Omega}$ & \textbf{Autodiff Laplacian [GiB]} & \textbf{Forward Laplacian [GiB]} \\
+      \midrule
+      1   & 0.21 (0.96x) & 0.22 (1.0x) \\
+      10  & 0.98 (1.6x)  & 0.61 (1.0x) \\
+      100 & 8.8 (1.9x)   & 4.6 (1.0x)  \\
+      \bottomrule
+      \end{tabular}
+  \end{center}
+  \caption{asdf}
+\end{table}
+We observe that the forward Laplacian uses significantly less memory for large input dimensions, up to only one half when $D_\Omega=100$.
+We visualized both tables using more values for $D_\Omega$ and observed linear scaling in both memory and run time, see \Cref{app:fig:comparison}.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=\linewidth]{../figures/laplacian_benchmark.pdf}
+  \caption{Time (left) and memory (right) required with the forward Laplacian used in our implementation and the \texttt{functorch} implementation; we find that for both methods both measures of complexity grow linearly in the input dimension.}
+  \label{app:fig:comparison}
+\end{figure}
+
+\paragraph{Other scalings}
+Both the forward Laplacian and nested backpropagation scale linearly w.r.t. batch size.
+Scaling w.r.t. output dimension (as asked by TQnM) is less relevant as many high-dimensional PDE problems are scalar-valued.
+Scaling w.r.t. number of trainable parameters is highly architecture-dependent. This is also true for simple backpropagation in standard deep learning applications and we believe this question needs to be answered on a case-by-case basis.
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main"
