[ADD] Update Hessian-free in Fig. 3 [no ci]

--- a/kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex/best_HessianFree.tex
+++ b/kfac_pinns_exp/exp26_poisson5d_mlp_tanh_256_bayes/tex/best_HessianFree.tex
@@ -1,1 +1,1 @@
-curvature matrix: $\text{GGN}$, initial damping: $\num[scientific-notation=true]{1.744291e-02}$, constant damping: $\text{yes}$, maximum CG iterations: $\num[scientific-notation=false]{332}$, $N_{\Omega}$: $\num[scientific-notation=false]{332}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{1529}$, batch sampling frequency: $\num[scientific-notation=false]{1412}$
+curvature matrix: $\text{GGN}$, initial damping: $\num[scientific-notation=true]{1.541954e+01}$, constant damping: $\text{no}$, maximum CG iterations: $\num[scientific-notation=false]{358}$, $N_{\Omega}$: $\num[scientific-notation=false]{1084}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{3837}$, batch sampling frequency: $\num[scientific-notation=false]{230}$
