--- a/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_KFAC.tex
+++ b/kfac_pinns_exp/exp14_poisson_100d_weinan/tex/best_KFAC.tex
@@ -1,1 +1,1 @@
-damping: $\num[scientific-notation=true]{1.357141e-03}$, momentum: $\num[scientific-notation=true]{5.370282e-01}$, exponential moving average: $\num[scientific-notation=true]{7.860784e-01}$, initialize Kronecker factors to identity: $\text{no}$, $N_{\Omega}$: $\num[scientific-notation=false]{131}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{2354}$, batch sampling frequency: $\num[scientific-notation=false]{50}$
+damping: $\num[scientific-notation=true]{9.724117e-03}$, momentum: $\num[scientific-notation=true]{5.015715e-01}$, exponential moving average: $\num[scientific-notation=true]{9.200952e-01}$, initialize Kronecker factors to identity: $\text{yes}$, $N_{\Omega}$: $\num[scientific-notation=false]{124}$, $N_{\partial\Omega}$: $\num[scientific-notation=false]{2332}$, batch sampling frequency: $\num[scientific-notation=false]{322}$
