[TEX] Polish section 1 [no ci]

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -4,7 +4,7 @@
 \PassOptionsToPackage{numbers, compress}{natbib}
 
 % either empty (for submission), 'preprint', or 'final'
-\def\status{preprint}
+\def\status{final}
 \usepackage[\status]{neurips_2024}
 
 \input{preamble/custom_early.tex}
