--- a/paper/preamble/metadata.tex
+++ b/paper/preamble/metadata.tex
@@ -14,8 +14,7 @@
 \author{%
   Felix Dangel\thanks{Equal contribution}\\
   Vector Institute \\
-  108 College St. \\
-  Toronto, Canada \\
+  Toronto \\ Canada \\
   \texttt{fdangel@vectorinstitute.ai} \\
   \And
   Johannes M\"uller$^*$\\
