--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -17,18 +17,17 @@ To address this, we build on the idea of Kronecker-factored approximate curvatur
 \item Empirically, we find that our KFAC-based optimizers are competitive with expensive second-order methods on small problems, scale more favorably to higher-dimensional neural networks and PDEs, and consistently outperform first-order methods and LBFGS (\Cref{sec:experiments}).
 \end{itemize}
 
-\textbf{Related work}
+\paragraph{Related work}
 Various approaches were developed to improve the optimization of PINNs such as adaptive re-weighting of loss terms~\citep{wang2021understanding,van2022optimally,wang2022and}, different sampling strategies for discretizing the loss~\citep{lu2021deepxde, nabian2021efficient, daw2022rethinking,zapf2022investigating, wang2022respecting, wu2023comprehensive}, and curriculum learning~\citep{krishnapriyan2021characterizing, wang2022respecting}.
 While LBFGS is known to improve upon first-order optimizers~\citep{markidis2021old},
-recently, other second-order methods that design meaningful preconditioners that respect the problems geometry have significantly outperformed it~\cite{zeng2022competitive, muller2023achieving, de2023operator, liu2024preconditioning, jnini2024gauss,chen2024teng, zampini2024petscml}.
+recently, other second-order methods that design meaningful preconditioners that respect the problem's geometry have significantly outperformed it~\cite{zeng2022competitive, muller2023achieving, de2023operator, liu2024preconditioning, jnini2024gauss,chen2024teng, zampini2024petscml}.
 \citet{muller2024optimization} provide a unified view on these approaches which greatly improve the accuracy of PINNs, but come with a significant per-iteration cost as one needs to solve a linear system in the network's high-dimensional parameter space, which is only feasible for small networks when done naively.
 One approach is to use matrix-free methods to approximately compute Gauss-Newton directions by introducing an inner optimization loop, see~\cite{schraudolph2002fast,martens2010deep} for supervised learning problems and~\cite{zeng2022competitive,bonfanti2024challenges, jnini2024gauss,zampini2024petscml} for PINNs.
 Instead, our KFAC-based approach uses an explicit structured curvature representation which can be updated over iterations and inverted more cheaply.
 
 We build on the literature on Kronecker-factored approximate curvature (KFAC), which was initially introduced in~\citet{heskes2000natural,martens2010deep} as an approximation of the per-layer Fisher matrix to perform approximate natural gradient descent.
 Later, KFAC was extended to convolutional~\citep{grosse2016kroneckerfactored}, recurrent~\citep{martens2018kroneckerfactored}, attention~\citep{pauloski2021kaisa,osawa2023pipefisher,grosse2023studying}, and recently to general linear layers with weight sharing~\cite{eschenhagen2023kroneckerfactored}.
-These works do not address preconditioners for loss functions with contributions from differential operators, as is the case for PINN losses.
-Kronecker-factored approximations have been used for variational Monte-Carlo methods, where despite the objective function involving a Laplacian term, the preconditioner does not~\citep{pfau2020ab,drissi2024second}.
+These works do not address preconditioners for losses with contributions from differential operators, as is the case for PINN losses.
 Our interpretation via Taylor-mode makes the computation graph of such losses explicit, and allows us to establish KFAC based on its generalization to linear weight sharing layers~\cite{eschenhagen2023kroneckerfactored}.
 
 %%% Local Variables:
