[TEX] Polish main text [no ci]

--- a/paper/preamble/custom.tex
+++ b/paper/preamble/custom.tex
@@ -24,6 +24,7 @@ group-minimum-digits={3}%
 % ===================================================================
 % FIGURES & COLORS
 % ===================================================================
+\usepackage{wrapfig} % side-wrap text next to a figure
 \usepackage{subcaption} % \subfigure environment
 \usepackage{tabularx} % tables with automatic line break
 \usepackage{ragged2e} % \Centering command to vertically center table cells
