--- a/paper/sections/acknowledgements.tex
+++ b/paper/sections/acknowledgements.tex
@@ -1,6 +1,7 @@
 \begin{ack} % automatically suppressed in anonymized submission
   The authors thank Runa Eschenhagen for insightful discussions on KFAC for linear weight sharing layers.
-  Resources used in preparing this research were provided, in part, by the Province of Ontario, the Government of Canada through CIFAR, and companies sponsoring Vector Institute.
+  FD would like to thank Luca Thiede for his adamant questions about Taylor mode and forward Laplacians.
+  Resources used in preparing this research were provided, in part, by the Province of Ontario, the Government of Canada through CIFAR, and companies sponsoring the Vector Institute.
   JM acknowledges funding by the Deutsche Forschungsgemeinschaft (DFG, German Research Foundation) under the project number 442047500 through the Collaborative Research Center \emph{Sparsity and Singular Structures} (SFB 1481).
 \end{ack}
 %%% Local Variables:
